# rclock

./: .gitmodules  README.md  Rclock documentation.docx  Requirements document.docx  asset  features-ideas.txt  meson.build
docs/: .~lock.Rclock documentation.docx#  .~lock.Requirements document.docx#  Arguments module documentation.docx  Colors module documentation.docx  Component diagram.xml  Datetime module documentation.docx  Design module documentation.docx  Rclock documentation.docx  Requirements document.docx  Screen-manager module documentation.docx  Shapes module documentation.docx
docs/private/: Arguments module documentation.docx  Colors module documentation.docx  Datetime module documentation.docx  Design module documentation.docx  Errors module documentation.docx  Rclock documentation.docx  Requirements document.docx  Screen-manager module documentation.docx  Shapes module documentation.docx
include/: arguments.h  colors.h  datetime.h  design.h  errors.h  global-includes.h  includes.h  screen-manager.h  shapes.h
include/helpers/: datetime.h  design.h  modes.h  startup.h  terminal-size.h
include/private/: arguments.h  colors.h  datetime.h  design.h  screen-manager.h
include/public/: arguments.h  colors.h  datetime.h  design.h  errors.h  global-includes.h  modes.h  notification.h  pomodoro.h  screen-manager.h  shapes.h  signal-handler.h  user-input.h
lib/: meson.build
src/: arguments.c  colors.c  datetime.c  design.c  errors.c  meson.build  r-clock.c  screen-manager.c  shapes.c
tests/: general-tests  general-tests.c  time-tests
(+47 files in other folders)
